4.8.30.1 dev v1 (#223)
* optimised delete key method for the discussion hub

* changes as per reivew comments

* added newer version of jdk for docker build issue

* fix for the test case failures (#222)

---------

Co-authored-by: shankaragoudab-tarento <shankaragouda.biradar@tarento.com>
Co-authored-by: Jayaprakash8887 <jayaprakash.n@tarento.com>
Co-authored-by: shankaragoudab <140387294+shankaragoudab@users.noreply.github.com>